fix nav covering scroll

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -87,7 +87,7 @@ html,
 body {
   max-height: 100vh;
   max-width: 100vw;
-  overflow-x: hidden;
+  /* overflow-x: hidden;  */
 }
 
 body {
